# frankfurtermcp

./: .env.template  .pre-commit-config.yaml  README.md  local.dockerfile  pyproject.toml  requirements.txt  smithery.dockerfile  smithery.yaml  smithery.yml  uv-upgrade.sh
.github/workflows/: pypi-publish.yml  uv-pytest.yml
src/frankfurtermcp/: __init__.py  common.py  composition.py  server.py
tests/: test_server.py
